Update JavaFX Project.md